Change jimage URLs to be more abstract, URI path is now just the module name   and resource name