@@ -26,9 +26,8 @@
 package sun.misc;
 
 import java.util.*;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.jar.JarFile;
-import sun.misc.JarIndex;
-import sun.misc.InvalidJarIndexException;
 import sun.net.www.ParseUtil;
 import java.util.zip.ZipEntry;
 import java.util.jar.JarEntry;
@@ -37,7 +36,6 @@ import java.util.jar.Attributes;
 import java.util.jar.Attributes.Name;
 import java.net.JarURLConnection;
 import java.net.MalformedURLException;
-import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.net.HttpURLConnection;
@@ -48,15 +46,14 @@ import java.security.AccessController;
 import java.security.AccessControlException;
 import java.security.CodeSigner;
 import java.security.Permission;
-import java.security.PrivilegedAction;
 import java.security.PrivilegedExceptionAction;
 import java.security.cert.Certificate;
 
 import jdk.internal.jimage.ImageLocation;
 import jdk.internal.jimage.ImageReader;
 
-import sun.misc.FileURLMapper;
 import sun.net.util.URLUtil;
+import sun.net.www.protocol.jimage.JImageURLConnection;
 
 /**
  * This class is used to maintain a search path of URLs for loading classes
@@ -65,12 +62,15 @@ import sun.net.util.URLUtil;
  * @author  David Connelly
  */
 public class URLClassPath {
-    final static String USER_AGENT_JAVA_VERSION = "UA-Java-Version";
-    final static String JAVA_VERSION;
+    private static final String USER_AGENT_JAVA_VERSION = "UA-Java-Version";
+    private static final String JAVA_HOME;
+    private static final String JAVA_VERSION;
     private static final boolean DEBUG;
     private static final boolean DISABLE_JAR_CHECKING;
 
     static {
+        JAVA_HOME = java.security.AccessController.doPrivileged(
+            new sun.security.action.GetPropertyAction("java.home"));
         JAVA_VERSION = java.security.AccessController.doPrivileged(
             new sun.security.action.GetPropertyAction("java.version"));
         DEBUG        = (java.security.AccessController.doPrivileged(
@@ -1105,31 +1105,57 @@ public class URLClassPath {
         }
     }
 
-   /**
-     * A Loader of classes and resources from a jimage file.
+    /**
+     * A Loader of classes and resources from a jimage file located in the
+     * runtime image.
      */
-    private static class JImageLoader extends Loader {
-        private final ImageReader jimage;
+    private static class JImageLoader
+        extends Loader implements JImageURLConnection.ResourceFinder
+    {
+        private static final AtomicInteger NEXT_INDEX = new AtomicInteger();
 
-        static URL toJImageURL(URL url) throws MalformedURLException {
-            return new URL("jimage" + url.toString().substring(4));
-        }
+        private final ImageReader jimage;
+        private final int index;
 
         JImageLoader(URL url) throws IOException {
-            super(toJImageURL(url));
-            this.jimage = JImageCache.get(getBaseURL());
-        }
+            super(url);
 
-        private String toEntryName(String name) {
-            return name;
+            // get path to image file and check that it's in the runtime
+            String path = url.getFile().replace('/', File.separatorChar);
+            path = new File(ParseUtil.decode(path)).getPath();
+            if (!path.startsWith(JAVA_HOME))
+                throw new IOException(path + " not in runtime image");
+
+            this.jimage = ImageReader.open(path);
+            this.index = NEXT_INDEX.getAndIncrement();
+
+            // register with the jimage protocol handler
+            JImageURLConnection.register(this);
         }
 
         /**
-         * Returns a URL to the given entry in the jimage.
+         * Maps the given resource name to a module.
          */
-        private URL toURL(String entry) {
+        private String nameToModule(String name) {
+            int pos = name.lastIndexOf('/');
+            if (pos > 0) {
+                String pkg = name.substring(0, pos);
+                String module = jimage.getModule(pkg);
+                if (module != null)
+                    return module;
+            }
+            // cannot map to module
+            return "UNNAMED" + index;
+        }
+
+        /**
+         * Constructs a URL for the resource name.
+         */
+        private URL toURL(String name) {
+            String module = nameToModule(name);
+            String encodedName = ParseUtil.encodePath(name, false);
             try {
-                return new URL(getBaseURL() + "!/" +  ParseUtil.encodePath(entry, false));
+                return new URL("jimage:/" + module + "/" + encodedName);
             } catch (MalformedURLException e) {
                 throw new InternalError(e);
             }
@@ -1137,11 +1163,10 @@ public class URLClassPath {
 
         @Override
         URL findResource(String name, boolean check) {
-            String entry = toEntryName(name);
-            ImageLocation location = jimage.findLocation(entry);
+            ImageLocation location = jimage.findLocation(name);
             if (location == null)
                 return null;
-            URL url = toURL(entry);
+            URL url = toURL(name);
             if (check) {
                 try {
                     URLClassPath.check(url);
@@ -1152,26 +1177,12 @@ public class URLClassPath {
             return url;
         }
 
-        // Returns the module name containing the given entry of a class file;
-        // otherwise return null
-        String findModule(String entry) {
-            if (entry.endsWith(".class")) {
-                return jimage.findModule(entry);
-            }
-            return null;
-        }
-
         @Override
         Resource getResource(String name, boolean check) {
-            final String entry = toEntryName(name);
-            ImageLocation location = jimage.findLocation(entry);
+            ImageLocation location = jimage.findLocation(name);
             if (location == null)
                 return null;
-            if (DEBUG) {
-                System.err.println("JImageLoader.getResource(\"" + name + "\") module: " +
-                                   findModule(entry) + " " + location);
-            }
-            final URL url = toURL(entry);
+            URL url = toURL(name);
             if (check) {
                 try {
                     URLClassPath.check(url);
@@ -1181,14 +1192,13 @@ public class URLClassPath {
             }
             return new Resource() {
                 @Override
-                public String getName() { return entry; }
+                public String getName() { return name; }
                 @Override
                 public URL getURL() { return url; }
                 @Override
                 public URL getCodeSourceURL() {
                     try {
-                        String name = findModule(entry);
-                        return URI.create("module:" + name).toURL();
+                        return new URL("module:" + nameToModule(name));
                     } catch (MalformedURLException e) {
                         throw new InternalError(e);
                     }
@@ -1206,9 +1216,17 @@ public class URLClassPath {
         }
 
         @Override
-        public void close() throws IOException {
-            JImageCache.remove(getBaseURL());
-            jimage.close();
+        public void close() {
+            throw new UnsupportedOperationException();
+        }
+
+        @Override
+        public Resource find(String module, String name) throws IOException {
+            String m = nameToModule(name);
+            if (!m.equals(module))
+                return null;
+            // URLConnection will do the permission check
+            return getResource(name, false);
         }
     }
 }
